tests/neg/i21537.check
-- Error: tests/neg/i21537.scala:10:18 ---------------------------------------------------------------------------------
10 |val x1 = 1 + (5 + foo) + 20 // error
   |                  ^^^
   |                  my error
-- Error: tests/neg/i21537.scala:11:14 ---------------------------------------------------------------------------------
11 |val x2 = 1 + (5 ~ 200) + 20 // error
   |              ^^^^^^^
   |              my error
-- Error: tests/neg/i21537.scala:12:18 ---------------------------------------------------------------------------------
12 |val x3 = 1 + (5 + bar) + 20 // error
   |                  ^^^
   |                  my error
-- Error: tests/neg/i21537.scala:13:14 ---------------------------------------------------------------------------------
13 |val x4 = 1 + (5 ! 200) + 20 // error
   |              ^^^^^^^
   |              my error
